--- a/vues/create_robot.ejs
+++ b/vues/create_robot.ejs
@@ -12,6 +12,8 @@
 <link rel="stylesheet" href="/style.css"/>
 <script src="/create_robot.js"></script>
 
+<%- include("header_connected") %>
+
 <body>
 
             CREATE
