--- a/vues/profil.ejs
+++ b/vues/profil.ejs
@@ -18,10 +18,10 @@
             <div>Level : <%= robot.level %></div>
             <div>Experience : <%= robot.experience %></div>
             <div>Money : <%= robot.money %></div>
-            <div>HP : <%= robot.hp %></div>
-            <div>Strength : <%= robot.strength %></div>
-            <div>Armor : <%= robot.armor %></div>
-            <div>Agility : <%= robot.agility %></div>
+            <div>HP : <%= robot.hp %> (<%= updateStats.hp %>)</div>
+            <div>Strength : <%= robot.strength %> (<%= updateStats.strength %>)</div>
+            <div>Armor : <%= robot.armor %> (<%= updateStats.armor %>)</div>
+            <div>Agility : <%= robot.agility %> (<%= updateStats.agility %>)</div>
         </div>
 
         <div class="skills-ligne">
