--- a/vues/select_robot.ejs
+++ b/vues/select_robot.ejs
@@ -8,7 +8,7 @@
     <title>Select page</title>
     <link rel="stylesheet" href="/style.css">
 </head>
-
+<%- include("header_connected") %>
 <body>
 
     <div><a href="/<%= userConnected.id_users %>/create_robot">Create a robot</a></div>
