--- a/vues/fight.ejs
+++ b/vues/fight.ejs
@@ -13,15 +13,17 @@
 
     <body> <!--(<//%= playerRobot.id_1 %>, <//%= playerRobot.id %>, <//%= enemyPlayerRobot.id_1 %>, <//%= enemyPlayerRobot.id_1 %>)-->
         <div class="skills-ligne">
+            <img src="<%= playerRobot.img%>">
             <%= playerRobot.nickname%>
         </div>
         <div class="skills-ligne">
-            BLOCK FIGHT
+            FIGHT !!!
             <br>
             <br>
             <%- combat %>
         </div>
         <div class="skills-ligne">
+            <img src="<%= enemyPlayerRobot.img%>">
             <%= enemyPlayerRobot.nickname%>
         </div>
     </body>
