--- a/vues/header_connected.ejs
+++ b/vues/header_connected.ejs
@@ -5,22 +5,41 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" type="text/css" href="/header_style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,300,0,0" />
     </head>
-
+    
     <body>
-        <div>Email <%= userConnected.email %></div>
-        <% if(typeof robot !="undefined") { %>
-        <div><a href="/game/<%= userConnected.id_users %>/<%= robot.id_robots %>">Robot: <%= robot.nickname%></a></div>
-        <% }%>
-        <div><a href="/<%= userConnected.id_users %>/select_robot">Change robots</a></div>
-        <% if(typeof robot !="undefined") { %>
-        <div><a href="/game/<%= userConnected.id_users %>/<%= robot.id_robots %>/arena">Arena !</a></div>
-        <% }%>
-        <% if(typeof robot !="undefined") { %>
-        <div><a href="/game/<%= userConnected.id_users %>/<%= robot.id_robots %>/shop">Shop</a></div>
-        <% }%>
-        <div><a href="/logout">Logout</a></div>
+        <header class="main">
+            <nav class="links">
+                <h2>
+                
+
+                <% if(typeof robot !="undefined") { %>
+                <a href="/game/<%= userConnected.id_users %>/<%= robot.id_robots %>">Robot: <%= robot.nickname%></a>
+                <% }%>
+
+                <a class="change-robot" href="/<%= userConnected.id_users %>/select_robot"><span class="material-symbols-outlined">
+                    group
+                    </span>Change robots</a>
+                <% if(typeof robot !="undefined") { %>
+                    <a href="/game/<%= userConnected.id_users %>/<%= robot.id_robots %>/arena">Arena !</a>
+                <% }%>
+
+                <% if(typeof robot !="undefined") { %>
+                    <a href="/game/<%= userConnected.id_users %>/<%= robot.id_robots %>/shops">Shop</a>
+                <% }%>
+
+                <a href="/logout" class="logout">Logout<span class="material-symbols-outlined">
+                    logout
+                    </span></a>
+            </h2>
+            </nav>
+        </header>
     </body>
 
 </html>
