--- a/vues/profil.ejs
+++ b/vues/profil.ejs
@@ -14,6 +14,7 @@
     <!--<a href="/game/<%= robot.id_users %>/<%= robot.id_robots %>/"></a>-->
 
         <div class="skills-ligne">
+            <div><img src="<%= robot.img %>"></div>
             <div>Nickname : <%= robot.nickname %></div>
             <div>Level : <%= robot.level %></div>
             <div>Experience : <%= robot.experience %></div>
