--- a/vues/shop.ejs
+++ b/vues/shop.ejs
@@ -11,16 +11,17 @@
 
 <body>
     <%- include("header_connected") %>
-    
-    <div class="skills-ligne">
-    Shop
-    <% for(let index=0; index < items.length; index++) { %>
-            <% if(items[index].isEquipped == 0) { %>
-                <div class="item"><a href="/game/<%= robot.id_users %>/<%= robot.id_robots %>/equip/<%= items[index].id_items %>/<%= items[index].type %>">
-                <img class="img-bag" src="<%= items[index].img %>">
-            </a></div>
-            <% } %>
-    <% } %>
+
+
+
+            <div class="skills-ligne">
+                Equipments to buy
+                <% for(let index=0; index < items.length; index++) { %>
+                            <div class="item"><a href="/game/<%= robot.id_users %>/<%= robot.id_robots %>/shops/buy/<%= shop.id_shops %>/<%= items[index].id_items %>">
+                            <img class="img-bag" src="<%= items[index].img %>">
+                        </a></div>
+                        Price : <%= items[index].price %>
+                <% } %>
 
 </body>
 
